log
Fri, May  2, 2025 11:59:51 PM: 
 treemap.c | 8 ++++++--
 1 file changed, 6 insertions(+), 2 deletions(-)
 tests:  4|7
total_score: 5/70
5729e4d
Sat, May  3, 2025  7:19:39 PM: 
 treemap.c | 12 +++++++++---
 1 file changed, 9 insertions(+), 3 deletions(-)
Compilation failed
In file included from test.c:4:0:
treemap.c: In function 'searchTreeMap':
treemap.c:78:32: error: 'Pair {aka struct Pair}' has no member named 'left'
             aux_pair = aux_pair->left;
                                ^~
treemap.c:80:32: error: 'Pair {aka struct Pair}' has no member named 'right'
             aux_pair = aux_pair->right;
                                ^~
252d50e
Sat, May  3, 2025  7:27:33 PM: 
 treemap.c | 20 ++++++++++++--------
 1 file changed, 12 insertions(+), 8 deletions(-)
 tests:  11|6
total_score: 15/70
0b8f0d8
Sat, May  3, 2025  8:26:32 PM: 
 treemap.c | 29 ++++++++++++++++++++++++++++-
 1 file changed, 28 insertions(+), 1 deletion(-)
Compilation failed
In file included from test.c:4:0:
treemap.c: In function 'insertTreeMap':
treemap.c:65:17: error: 'aux' undeclared (first use in this function)
             if (aux->left == NULL){
                 ^~~
treemap.c:65:17: note: each undeclared identifier is reported only once for each function it appears in
8548885
